Fix contrast for text on primary color background

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,8 +13,8 @@ html, body {
   max-width: 1140px !important;
 }
 
-.btn-primary, .badge-primary {
-  color: #fff !important;
+.btn-primary, .badge-primary, .progress-bar {
+  color: #343a40 !important;
 }
 
 .card-columns {
